# Project-5

./: Automaton.h  CMakeLists.txt  ColonAutomaton.cpp  ColonDashAutomaton.cpp  CommentAutomaton.cpp  CommentAutomaton.h  CommentBlockAutomaton.cpp  CommentBlockAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.cpp  FactsAutomaton.h  Graph.cpp  Graph.h  Header.cpp  Header.h  IDAutomaton.cpp  IDAutomaton.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  MatcherAutomaton.cpp  MatcherAutomaton.h  Node.cpp  Node.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  QueriesAutomaton.cpp  QueriesAutomaton.h  Relation.cpp  Relation.h  Rule.cpp  Rule.h  (+16 more)
Lab5PassOffCases-spring2021/Lab5PassOffCases/5-100/: input1.txt  input3.txt  input6.txt  input7.txt  input8.txt
Lab5PassOffCases-spring2021/Lab5PassOffCases/5-80/: input0.txt  input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt
Lab5PassOffCases-spring2021/__MACOSX/: ._Lab5PassOffCases
Lab5PassOffCases-spring2021/__MACOSX/Lab5PassOffCases/: ._5-100
Lab5PassOffCases-spring2021/__MACOSX/Lab5PassOffCases/5-100/: ._answer3.txt  ._input1.txt  ._input2.txt  ._input3.txt  ._input5.txt  ._input6.txt  ._input7.txt  ._input8.txt
Lab5PassOffCases-spring2021/__MACOSX/Lab5PassOffCases/5-80/: ._answer7.txt  ._input0.txt  ._input1.txt  ._input2.txt  ._input3.txt  ._input4.txt  ._input5.txt  ._input6.txt  ._input7.txt
